tdf#123341 XLSX: fix vertical alignment in comments

Import and export of VML element TextVAlign weren't
supported by Calc, losing vertical aligment of the
comments assigned to the spreadsheet cells.

Change-Id: Ice70d3c65021902991ae869b6c60e30e4cdef8c3